[project]
name = "aoc2024"
version = "0.0.1"
description = "Advent of Code: 2024"
authors = [{ name = "Lance A. Brown" }]
readme = "README.md"
keywords = ["python", "adventofcode", "aoc", "2024", "aoc2024"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://labrown.github.io/aoc2024/"
Repository = "https://github.com/labrown/aoc2024"
Documentation = "https://labrown.github.io/aoc2024/"

[tool.uv]
dev-dependencies = [
    "austin-dist>=3.7.0",
    "colorhash>=2.0.0",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "psutil>=6.1.0",
    "rich>=13.9.4",
    "rich-argparse>=1.6.0",
    "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["aoc2024"]

[tool.mypy]
files = ["aoc2024"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = []

[tool.ruff]
target-version = "py39"
line-length = 90
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"**/*" = ["S101"]

[tool.ruff.format]
preview = true
